Added missing order fields.  Made helper functions __private.  Fixed a bug where I had broken create_tables.py dropping tables, since the Report table has to be dropped last. Nested variants are now loaded (although they still aren't recursive).  Added some documentation files from GeneInsight.

--- a/config_example.ini
+++ b/config_example.ini
@@ -1,7 +1,5 @@
-[Login]
-Username: my_username
-Password: my_password
+# More info on connection configurations for sqlalchemy at:
+# http://docs.sqlalchemy.org/en/latest/core/engines.html
 
 [Database]
-Server:   my.server.edu
-Database: my_databse
+Connection: sqlite:///my_database.db
